# CaptureZY

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
cmake/: CaptureZYOptions.cmake
docs/: architecture.md  current-status.md  decisions.md  dev-setup.md  manual-regression.md  product.md  release-crash-diagnostics.md  release-packaging.md  roadmap.md  severe-issues.md
scripts/: analyze_latest_dump.ps1  build_clang_asan.ps1  clang_tidy_header_probe.ps1  package_release.ps1  pageheap_capturezy.ps1  run_clang_tidy.ps1  run_clang_tidy_changed.ps1  show_latest_diagnostics.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/core/: CMakeLists.txt  app_metadata.cpp  app_metadata.h  app_settings.cpp  app_settings.h  app_settings_store.cpp  app_settings_store.h  app_state.cpp  app_state.h  crash_diagnostics.cpp  crash_diagnostics.h  log.cpp  log.h
src/feature_capture/: CMakeLists.txt  capture_annotation.cpp  capture_annotation.h  capture_file_dialog.cpp  capture_file_dialog.h  capture_overlay.cpp  capture_overlay.h  capture_result.cpp  capture_result.h  screen_capture.cpp  screen_capture.h
src/feature_pin/: CMakeLists.txt  pin_manager.cpp  pin_manager.h  pin_window.cpp  pin_window.h
src/platform_win/: CMakeLists.txt  main_window.cpp  main_window.h  main_window_capture.cpp  main_window_settings.cpp  main_window_tray.cpp  settings_dialog.cpp  settings_dialog.h  tray_menu.cpp  tray_menu.h
src/render_d2d/: CMakeLists.txt  render_backend.cpp  render_backend.h
tests/: CMakeLists.txt
tests/feature_capture/: annotation_session_test.cpp
